--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  background-color: Canvas;
+  color: CanvasText;
+  color-scheme: dark;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.imagen-3d {
+  width: 200px; /* Ancho de la imagen */
+  height: 300px; /* Alto de la imagen */
+  position: relative;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.imagen-3d img {
+  width: 100%;
+  height: 100%;
+  transform: perspective(1000px) rotateY(20deg); /* Efecto 3D con rotación en el eje Y */
+  transform-origin: right center; /* Punto de origen de la rotación */
+  box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.3); /* Sombra en el lado derecho */
 }
